--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "diga/shopwarecachehelper-plugin",
   "description": "shopwarecachehelper Plugin",
-  "version": "v1.0.3",
+  "version": "2.0.0",
   "type": "shopware-platform-plugin",
   "license": "proprietary",
   "authors": [{
@@ -33,9 +33,9 @@
     }
   },
   "require": {
-    "php": ">= 7.4",
-    "shopware/core": "~6.4 <6.5",
-    "shopware/storefront": "~6.4 <6.5"
+    "php": ">= 8.1",
+    "shopware/core": "~6.5",
+    "shopware/storefront": "~6.5"
   },
   "require-dev": {
       "phpunit/phpunit": "^9.5",
