--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,9 @@
   "require-dev": {
       "phpunit/phpunit": "^9.5",
       "phpstan/phpstan": "^1.8",
-      "friendsofphp/php-cs-fixer": "*"
+      "friendsofphp/php-cs-fixer": "*",
+    "rector/rector": "^1.0",
+    "frosh/shopware-rector": "^0.3.0"
   },
   "config": {
     "allow-plugins": {
