--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
   },
   "require": {
     "php": ">= 8.1",
-    "shopware/core": "6.5.*",
-    "shopware/storefront": "6.5.*"
+    "shopware/core": ">=6.5 <6.6",
+    "shopware/storefront": ">=6.5 <6.6"
   },
   "require-dev": {
       "phpunit/phpunit": "^9.5",
