--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "diga/shopwarecachehelper-plugin",
   "description": "shopwarecachehelper Plugin",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "type": "shopware-platform-plugin",
   "license": "proprietary",
   "authors": [{
@@ -34,8 +34,8 @@
   },
   "require": {
     "php": ">= 8.1",
-    "shopware/core": ">=6.5 <6.6",
-    "shopware/storefront": ">=6.5 <6.6"
+    "shopware/core": "~6.6, <7.4",
+    "shopware/storefront": "~6.6, <7.4"
   },
   "require-dev": {
       "phpunit/phpunit": "^9.5",
