--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "diga/shopwarecachehelper-plugin",
   "description": "shopwarecachehelper Plugin",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "type": "shopware-platform-plugin",
   "license": "proprietary",
   "authors": [{
@@ -38,8 +38,8 @@
     "shopware/storefront": ">=6.5 <6.6"
   },
   "require-dev": {
-      "phpunit/phpunit": "^9.5",
-      "phpstan/phpstan": "^1.8",
+      "phpunit/phpunit": "*",
+      "phpstan/phpstan": "*",
       "friendsofphp/php-cs-fixer": "*"
   },
   "config": {
