--- a/composer.json
+++ b/composer.json
@@ -33,16 +33,13 @@
     }
   },
   "require": {
-    "php": ">= 8.1",
-    "shopware/core": "~6.6, <7.4",
-    "shopware/storefront": "~6.6, <7.4"
+    "shopware/core": "~6.6.0",
+    "shopware/storefront": "~6.6.0"
   },
   "require-dev": {
-      "phpunit/phpunit": "^9.5",
-      "phpstan/phpstan": "^1.8",
-      "friendsofphp/php-cs-fixer": "*",
-    "rector/rector": "^1.0",
-    "frosh/shopware-rector": "^0.3.0"
+      "phpunit/phpunit": "*",
+      "phpstan/phpstan": "*",
+      "friendsofphp/php-cs-fixer": "*"
   },
   "config": {
     "allow-plugins": {
