--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,15 @@
 {
   "name": "diga/shopwarecachehelper-plugin",
   "description": "shopwarecachehelper Plugin",
-  "version": "3.0.1",
+  "version": "4.0.0",
   "type": "shopware-platform-plugin",
   "license": "proprietary",
-  "authors": [{
-    "name": "ditegra GmbH"
-  }],
+  "authors": [
+  {
+    "name": "ditegra GmbH",
+	 "homepage": "https://ditegra.de"
+  }
+  ],
   "autoload": {
     "psr-4": {
       "DigaShopwareCacheHelper\\": "src/"
@@ -18,6 +21,7 @@
       "de-DE": "Cache Helper",
       "en-GB": "Cache Helper"
     },
+	 "author": "ditegra GmbH",
     "copyright": "ditegra GmbH",
     "description": {
       "de-DE": "Hilft bei der Fehlersuche und Untersuchung, versteht des Shopware Caching, verschiedene Möglichkeiten, Cache-Ereignisse zu protokollieren und Shopware-Probleme zu überprüfen",
@@ -33,8 +37,8 @@
     }
   },
   "require": {
-    "shopware/core": "~6.6.0",
-    "shopware/storefront": "~6.6.0"
+    "shopware/core": "~6.7.1",
+    "shopware/storefront": "~6.7.1"
   },
   "require-dev": {
       "phpunit/phpunit": "*",
